# reauth

./: AGENTS.md  README.md  justfile  mkdocs.yml  pyproject.toml  solo.yml
.agents/skills/authentication-terminology/: SKILL.md
.agents/skills/openid-connect-core/: SKILL.md
.agents/skills/openid-connect-discovery/: SKILL.md
.agents/skills/owasp-cheatsheets/: SKILL.md
.agents/skills/rfc-spec/: SKILL.md
.agents/skills/rfc-spec/scripts/: create-rfc-skill.sh
.agents/skills/rfc4226/: SKILL.md
.agents/skills/rfc6238/: SKILL.md
.agents/skills/rfc6749/: SKILL.md
.agents/skills/rfc7523/: SKILL.md
.agents/skills/rfc7636/: SKILL.md
.agents/skills/rfc8176/: SKILL.md
.agents/skills/webauthn-2/: SKILL.md
.agents/skills/webauthn-2/references/: webauthn-2.txt
.github/workflows/: build.yml  copilot-setup-steps.yml  documentation.yml
.zed/: settings.json
docs/reference/: reauth.md
reauth/: __init__.py  amr.py  authentication_session.py  crypto.py
reauth/factors/: __init__.py  base.py  email_otp.py  hotp.py  totp.py
reauth/factors/oauth2/: apple.py  base.py  github.py  google.py  microsoft.py  oidc.py  state.py
tests/: test_add.py  test_authentication_session.py  test_crypto.py
tests/factors/: test_email_otp.py  test_hotp.py  test_totp.py
tests/factors/oauth2/: conftest.py  test_apple.py  test_base.py  test_github.py  test_microsoft.py  test_oidc.py  test_state.py
