
[project]
name = "reauth"
authors = [
  { name = "reauth", email = "hello@fvoron.com" }
]
description = "The authentication toolkit for Python"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.14"
dependencies = [
    "anyio",
]

[project.urls]
Documentation = "https://frankie567.github.io/reauth/"
Source = "https://github.com/frankie567/reauth"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "reauth/__init__.py"

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
    "sqlalchemy[asyncio]>=2.0.49",
    "aiosqlite>=0.22.1",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP"]

[tool.pytest.ini_options]
addopts = "--cov=reauth/ --cov-report=term-missing"


[tool.uv]
default-groups = ["dev"]

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
disallow_untyped_defs = true

[tool.basedpyright]
typeCheckingMode = "off"
